--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,17 @@
     "@prisma/client": "^5.12.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "ioredis": "^5.6.1",
+    "redis": "^5.6.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.19.7",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "prisma": "^5.12.0",
