update v1 Dockerfile BE, add RUN npm prune --productio

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,14 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --production
+RUN npm install
 
 COPY . .
 
 RUN npm run build
+
+# Nếu muốn tối ưu, có thể xóa devDependencies sau khi build:
+RUN npm prune --production
 
 EXPOSE 3001
 
